correct gap and grid section

--- a/styles/style.css
+++ b/styles/style.css
@@ -145,7 +145,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  gap: clamp(40px, 1.3073rem + 5.0891vw, 60px);
+  gap: clamp(50px, 2.5286rem + 2.5445vw, 80px);;
   margin-block: clamp(40px, 1.3073rem + 5.0891vw, 60px);
 }
 
@@ -239,8 +239,12 @@
 }
 
 @media (width >= 768px) {
+  .main {
+    gap: 80px;
+  }
+
   .section:not(:has(.section__picture)) {
-    grid-template-columns: clamp(236px, -6.625rem + 44.5313vw, 350px) 1fr;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .section_custom {
@@ -248,9 +252,14 @@
     grid-template-rows: auto 1fr;
   }
 
+  .section__list {
+    grid-column-start: 2;
+    grid-column-end: span 3;
+  }
+
   .section__list_custom {
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: span 3;
   }
 
   .section__picture {
